--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <h1>Welcome to My Introduction Page</h1>
     <p>
-     My name is Aashi Chakrawarti. and this is the part of main branch .
+     My name is Aashi Chakrawarti. and this is the part of sub branch .
     </p>
     
 </body>
